crates/gateway/tests/snapshots/snapshot_tests__snapshot_error_response_no_route.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 350
expression: error
---
error:
  message: No suitable routes found. Configure credentials in gateway.yaml
  type: no_route_available
