crates/gateway/tests/snapshots/snapshot_tests__snapshot_error_response_rate_limit.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 361
expression: error
---
error:
  message: Too many requests. Please try again later.
  type: rate_limit_error
