crates/gateway/tests/snapshots/snapshot_tests__snapshot_error_response_unauthorized.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 372
expression: error
---
error:
  message: Invalid or expired API token
  type: invalid_request_error
