crates/gateway/tests/snapshots/snapshot_tests__snapshot_health_status_no_credentials.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 274
expression: status
---
status: healthy
uptime_secs: "[uptime]"
credential_count: 0
healthy_count: 0
degraded_count: 0
unhealthy_count: 0
