crates/gateway/tests/snapshots/snapshot_tests__snapshot_model_info_minimal.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 313
expression: model
---
id: claude-3-opus
provider: anthropic
capabilities: []
context_window: 200000
