crates/gateway/tests/snapshots/snapshot_tests__snapshot_model_info_wildcard.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 302
expression: model
---
id: "openai:*"
provider: openai
capabilities:
  - all
context_window: 128000
