crates/gateway/tests/snapshots/snapshot_tests__snapshot_model_info_with_capabilities.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 291
expression: model
---
id: gpt-4
provider: openai
capabilities:
  - streaming
  - tools
  - vision
context_window: 128000
