crates/gateway/tests/snapshots/snapshot_tests__snapshot_models_response_empty.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 404
expression: response
---
count: 0
message: No models configured. Add credentials to gateway.yaml
models: []
